Changed bell style to none in windows terminal

--- a/microsoft_windows_terminal_settings/settings.json
+++ b/microsoft_windows_terminal_settings/settings.json
@@ -50,7 +50,7 @@
                 "name": "Command Prompt"
             },
             {
-                "bellStyle": "audible",
+                "bellStyle": "none",
                 "colorScheme": "One Half Dark",
                 "cursorShape": "filledBox",
                 "experimental.retroTerminalEffect": false,
