Setup tmux to open with specific layout using tmux attach + Alias grep to grep with color

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,3 +1,9 @@
 # Enable mouse mode
 set -g mouse on
 set -g history-file ~/.tmux_history
+
+# Start tmux with specific layou
+new -s my_sess # create new session
+neww -n shell # create new window
+split-window -t shell # split vertically the window just created
+split-window -h -t shell
