Modified default window layout tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -5,5 +5,5 @@ set -g history-file ~/.tmux_history
 # Start tmux with specific layou
 new -s my_sess # create new session
 neww -n shell # create new window
-split-window -t shell # split vertically the window just created
-split-window -h -t shell
+split-window -h -t shell # split horizontally the window just created
+split-window -t shell # split vertically
