Configured telescope keybindings to find files, live grep and see buffer
Removed ctrl+v shortcut to paste in windows terminal settings.json

Change escape time in tmux to 20 to remove delay between normal more and
insert mode toggling in nvim

Added rc.conf file for ranger - file is self explanatory

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.git/
 assets/
 
 # Home folder files 
@@ -21,3 +22,5 @@ Documents/
 .bash_logout
 .config/powershell
 .config/user-dirs.dirs
+.config/nvim/autoload/
+.config/nvim/plugged
