--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,6 +1,7 @@
 # Enable mouse mode
 set -g mouse on
 set -g history-file ~/.tmux_history
+set -sg escape-time 20
 
 # Start tmux with specific layou
 new -s my_sess # create new session
