Create first pane with ranger running in tmux

--- a/.tmux.conf
+++ b/.tmux.conf
@@ -1,10 +1,15 @@
+#!/usr/bin/tmux source-file
+
 # Enable mouse mode
 set -g mouse on
 set -g history-file ~/.tmux_history
+
+# Escape time for smoother toggling between insert and normal mode in vim
 set -sg escape-time 20
 
 # Start tmux with specific layou
-new -s my_sess # create new session
-neww -n shell # create new window
+new -s session # create new session
+neww -n shell "ranger" # create new window and run "ranger" in it
+split-window -t shell -l 99% # vertical split to take 70% of available space
 split-window -h -t shell # split horizontally the window just created
-split-window -t shell # split vertically
+split-window -t shell -l 100% # split vertically
