--- a/.gitconfig
+++ b/.gitconfig
@@ -5,8 +5,20 @@
 	required = true
 [core]
 	editor = nvim
-	pager = less -rS
+	pager = delta
 [diff]
 	tool = vimdiff
+	colorMoved = default
 [alias]
-	lg = log --color --graph --pretty=format:'%Cred%h%Creset -%C(yellow)%d%Creset %s %Cgreen(%cr) %C(bold blue)<%an>%Creset' --abbrev-commit
+	lg = log --pretty=format:'%Cred%h%Creset %C(bold blue)%an%Creset %Cgreen(%cr) -%C(yellow)%d%Creset %s' --abbrev-commit
+[interactive]
+    diffFilter = delta --color-only
+[add.interactive]
+    useBuiltin = false # required for git 2.37.0
+
+[delta]
+    navigate = true    # use n and N to move between diff sections
+    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+
+[merge]
+    conflictstyle = diff3
