--- a/.gitconfig
+++ b/.gitconfig
@@ -17,6 +17,7 @@
     useBuiltin = false # required for git 2.37.0
 
 [delta]
+    line-numbers = true
     navigate = true    # use n and N to move between diff sections
     light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
 
