--- a/.tmux.conf
+++ b/.tmux.conf
@@ -8,8 +8,7 @@ set -g history-file ~/.tmux_history
 set -sg escape-time 20
 
 # Start tmux with specific layou
-new -s session # create new session
-neww -n shell "ranger" # create new window and run "ranger" in it
-split-window -t shell -l 99% # vertical split to take 70% of available space
+new -s my_sess # create new session
+neww -n shell # create new window
 split-window -h -t shell # split horizontally the window just created
 split-window -t shell -l 100% # split vertically
