Enable arrow keys

--- a/.vsvimrc
+++ b/.vsvimrc
@@ -1,3 +1,6 @@
+" Enable text highlighting on search
+:set hlsearch
+
 "Remap leader key to space
 let mapleader = " "
 
@@ -5,14 +8,14 @@ let mapleader = " "
 set shiftwidth=4
 
 "Disable arrowkeys
-nmap <LEFT> <NOP>
-nmap <RIGHT> <NOP>
-nmap <UP> <NOP>
-nmap <DOWN> <NOP>
-imap <LEFT> <NOP>
-imap <RIGHT> <NOP>
-imap <UP> <NOP>
-imap <DOWN> <NOP>
+"nmap <LEFT> <NOP>
+"nmap <RIGHT> <NOP>
+"nmap <UP> <NOP>
+"nmap <DOWN> <NOP>
+"imap <LEFT> <NOP>
+"imap <RIGHT> <NOP>
+"imap <UP> <NOP>
+"imap <DOWN> <NOP>
 
 " Map Y to yank into clipboard in visual mode
 xnoremap Y "+y
