Remap d to not yank text

--- a/.vsvimrc
+++ b/.vsvimrc
@@ -46,3 +46,5 @@ vnoremap <Tab> %
 cnoreabbrev <expr> W ((getcmdtype() is# ':' && getcmdline() is# 'W')?('w'):('W'))
 cnoreabbrev <expr> Q ((getcmdtype() is# ':' && getcmdline() is# 'Q')?('q'):('Q'))
 
+" Remap d to not yank deleted text
+nnoremap d "_d
