--- a/.gitconfig
+++ b/.gitconfig
@@ -4,23 +4,21 @@
 	process = git-lfs filter-process
 	required = true
 [core]
-	editor = nvim
+	editor = vim
 	pager = delta
 [diff]
 	tool = vimdiff
-	colorMoved = default
 [alias]
 	lg = log --pretty=format:'%Cred%h%Creset %C(bold blue)%an%Creset %Cgreen(%cr) -%C(yellow)%d%Creset %s' --abbrev-commit
 	rank = shortlog -sn --no-merges
 [interactive]
-    diffFilter = delta --color-only
+	diffFilter = delta --color-only
 [add.interactive]
-    useBuiltin = false # required for git 2.37.0
-
+	useBuiltin = false # required for git 2.37.0
 [delta]
-    line-numbers = true
-    navigate = true    # use n and N to move between diff sections
-    light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
-
-[merge]
-    conflictstyle = diff3
+	line-numbers = true
+	navigate = true    # use n and N to move between diff sections
+	light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+[user]
+	name = MMustafa
+	email = mohammed.mustafa@wilcom.com
