--- a/.gitconfig
+++ b/.gitconfig
@@ -19,6 +19,7 @@
 	line-numbers = true
 	navigate = true    # use n and N to move between diff sections
 	light = false      # set to true if you're in a terminal w/ a light background color (e.g. the default macOS terminal)
+	side-by-side = true # side by side view
 [user]
 	name = MMustafa
 	email = mohammed.mustafa@wilcom.com
